# intermediate-python

./: .gitignore  .gitmodules  README.md  requirements.txt
content/: 00_about_me.ipynb  00_about_the_course.ipynb  00_index.ipynb  01_python_basic_overview.ipynb  02_intemediate_collections.ipynb  02_memory_management_in_python.ipynb  03_function_parameters_and_arguments.ipynb  03_memory_management_in_python.ipynb  04_function_parameters_and_arguments.ipynb  04_namespaces_scopes_and_closures.ipynb  05_namespaces_scopes_and_closures.ipynb  05_other_functions_concepts.ipynb  06_other_functions_concepts.ipynb  06_sequence_iterators_and_generators.ipynb  07_context_managers.ipynb  07_sequence_iterators_and_generators.ipynb  08_argparse.ipynb  08_context_managers.ipynb  09_unittest.ipynb  10_concurrency.ipynb  11_concurrency.ipynb  11_virtual_environment.ipynb  12_packaging.ipynb  12_virtual_environment.ipynb  13_debugging.ipynb  13_packaging.ipynb  14_python_builtin_cli.ipynb  15_python_toolkit.ipynb  example.py  save_and_exec_magic.py  test_example.py  tmp.py
content/08_argparse/: 09_argparse.ipynb  09_argparse_end.py  09_argparse_start.py  git_cli.py  vm_cli.py
content/09_argparse/: 09_argparse.ipynb  09_argparse_end.py  09_argparse_start.py
content/example/: concate_with_join.py  concate_with_plus.py  convert_to_pdf.py  debug_example.py  identifier_example.py  main.py  memory_profile.py  scope.py  swap_number.py  test_example.py
content/hello-world/: setup.cfg
content/hello-world/hello_world/: main.py
content/static/: file1.txt  (+4 more)
examples/: identifier.py
(+10 files in other folders)
