[metadata]
name = hello-world
version = 1.0.0
description = Some sample hello world package
author = Debakar Roy
author_email = debakar.roy@outlook.com
url = https://github.com/debakarr/hello-world

[options]
packages = find:

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    hello-world-cli = hello_world.main:main
